support layouts, posts, includes

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -245,3 +245,19 @@ a {
 .cf {
   zoom:1;
 }
+
+.current {
+  background-color: #000531;
+  color: #fff;
+}
+
+.nav {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.nav > li {
+  display: inline-block;
+}
+L
