--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="nav-primary" role="navigation" >
+<aside id="sidebar">
     <ul>
         {% for p in site.pages %}
         <li>
@@ -6,4 +6,4 @@
         </li>
         {% endfor %}
     </ul>
-</nav>
+</aside>
