--- a/css/cloudia.css
+++ b/css/cloudia.css
@@ -70,6 +70,14 @@
     text-align: left;
     min-height: 150px;
   }
+  #response {
+    font-size: 14px;
+    font-weight: bold;
+    border: 1px solid #ddd;
+    padding: 15px;
+    text-align: left;
+    min-height: 150px;
+  }
   #start_button {
     border: 0;
     background-color:transparent;
